# steer

./: .gitignore  RESULTS_OPEN_QUESTIONS.md  STEER_COMPLETE_INVESTIGATION_REPORT.md  a2rag.py  benchmark_beir.py  benchmark_beir_v2.py  benchmark_domain_validation.py  benchmark_multimodel.py  benchmark_preprocessing.py  benchmark_projection_threshold.py  benchmark_second_model.py  benchmark_semantic_preprocess.py  deep_analysis.py  item10_rewrite_local.py  modal_17ops_phase1.py  modal_17ops_phase2.py  modal_17ops_phase3.py  modal_adaptive_alpha.py  modal_adaptive_stack.py  modal_adaptive_stack_bge.py  modal_augmented_preprocessing.py  modal_benchmarks.py  modal_centroid_ops.py  modal_composed_addition.py  modal_contrastive_steer.py  modal_crossdomain_eval.py  modal_future_work_tests.py  modal_fw_launcher.sh  modal_gaps.py  modal_isotropy_correction.py  modal_item10_full.py  modal_multivector.py  modal_orbit_gradient_walk.py  modal_perquery_targets.py  modal_quantization_robustness.py  modal_reranker_test.py  modal_rotated_corpus.py  modal_significance.py  modal_significance_full.py  modal_steer_classifier.py  (+6 more)
arxiv_submission/: README_SUBMISSION.md  paper.tex  paper_ptbr.tex
outreach/: blog_post_draft.md  email_han_xiao_jina.md  email_nils_reimers_cohere.md
results/beir/: all_results.json  scifact_results.json
results/beir_v2/: all_results.json  arguana.json  fiqa.json  nfcorpus.json  scifact.json
results/deep_analysis/: deep_analysis.json  second_model_minilm.json
results/item11_threshold/: run_log.txt
results_local/: composed_addition
results_modal/item11/: fiqa.json  (+1 more)
steer_package/: README.md  pyproject.toml
steer_package/steer/: __init__.py  core.py  operations.py
submissions/: COPIAR_COLAR_SSRN.md
(+162 files in other folders)
