[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steer-retrieval"
version = "0.1.0"
description = "STEER: Semantic Transformation for Embedding-space Exploration in Retrieval"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Renato Aparecido Gomes", email = "renatoapgomes@gmail.com"},
]
keywords = ["retrieval", "embeddings", "semantic-search", "steering", "RAG", "information-retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/RAG7782/steer"
Paper = "https://doi.org/10.5281/zenodo.19325724"
Documentation = "https://github.com/RAG7782/steer#readme"

[tool.setuptools.packages.find]
include = ["steer*"]
